# dmp-esn

./: ESN.ipynb  ESN_weights.ipynb  Echo-State-network__Definition.ipynb  Echo-state-Network__Demo.ipynb  One-dimensional-Task__DMP.ipynb  One-dimensional-task__ESN.ipynb  README.md  Two-dimensional-task__ESN.ipynb  Two-dimensional_parametric_DMP_vs_ESN.ipynb  dmp.ipynb  esn_1D_task.ipynb  esn_2D_task.ipynb
DMP/: .tags
DMP/stulp/: .cpp_sources  .h_sources
DMP/stulp/bin_test/: testEigenBoostSerialization
DMP/stulp/docs/eigenrealtime/: .tags
DMP/stulp/docs_html/: doxygen_sqlite3.db
DMP/stulp/docs_html/html/: BasisFunction_8cpp.html  BasisFunction_8cpp__incl.map  BasisFunction_8cpp__incl.md5  BasisFunction_8cpp_source.html  BasisFunction_8hpp.html  BasisFunction_8hpp__dep__incl.map  BasisFunction_8hpp__dep__incl.md5  BasisFunction_8hpp__incl.map  BasisFunction_8hpp__incl.md5  BasisFunction_8hpp_source.html  BoostSerializationToString_8hpp.html  BoostSerializationToString_8hpp__dep__incl.map  BoostSerializationToString_8hpp__dep__incl.md5  BoostSerializationToString_8hpp__incl.map  BoostSerializationToString_8hpp__incl.md5  BoostSerializationToString_8hpp_source.html  CostFunction_8hpp.html  CostFunction_8hpp__dep__incl.map  CostFunction_8hpp__dep__incl.md5  CostFunction_8hpp__incl.map  CostFunction_8hpp__incl.md5  CostFunction_8hpp_source.html  DistributionGaussian_8cpp.html  DistributionGaussian_8cpp__incl.map  DistributionGaussian_8cpp__incl.md5  DistributionGaussian_8cpp_source.html  DistributionGaussian_8hpp.html  DistributionGaussian_8hpp__dep__incl.map  DistributionGaussian_8hpp__dep__incl.md5  DistributionGaussian_8hpp__incl.map  DistributionGaussian_8hpp__incl.md5  DistributionGaussian_8hpp_source.html  DmpContextualOneStep_8cpp.html  DmpContextualOneStep_8cpp__incl.map  DmpContextualOneStep_8cpp__incl.md5  DmpContextualOneStep_8cpp_source.html  DmpContextualOneStep_8hpp.html  DmpContextualOneStep_8hpp__dep__incl.map  DmpContextualOneStep_8hpp__dep__incl.md5  DmpContextualOneStep_8hpp__incl.map  (+1193 more)
DMP/stulp/src/dmp_bbo/demos/: .tags
ESN/: .py_sources  e_cursive_trajectory.py  esn.py  esn_discrete.py  esn_discrete_2d.py  esn_discrete_nd.py  esn_disctrete_nd.py
ESN/.ipynb_checkpoints/: esn-checkpoint.ipynb  esn-competitive-checkpoint.ipynb  reservoir-checkpoint.ipynb
esn/: dynrot.ipynb  dynrot.py  esn.ipynb  esn.py  esn_discrete.py  esn_discrete_2d.py  reservoir.ipynb  reservoir.py
parametric/parametric_dmp/: .cpp_sources  CMakeLists.txt
parametric/parametric_dmp/src/: .cpp_sources  .tags  CMakeLists.txt  fixed_se_dmp.cpp  fixed_se_dmp_lwpr.cpp  parametric_dmp_lwr.cpp  parametric_se_dmp.cpp
parametric/parametric_esn/: .py_sources  .tags  esn_parametric.py
parametric/parametric_esn/data/: plot.py
parametric/parametric_esn/scripts/: calculate_error.py  make_cursive_e_trajectories.py  make_parametric_cursive_e_trajectories.py  make_trajectories.py  plot_cursive_e.py
(+877 files in other folders)
